# git-vendor

./: .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: CD.yml  CI.yml  Lint.yml  Version.yml
crates/git-set-attr/: .gitattributes  Cargo.toml
crates/git-set-attr/src/: lib.rs  main.rs
crates/git-set-attr/tests/: set_attr.rs
plumbing/git-filter-tree/: Cargo.toml
plumbing/git-filter-tree/src/: lib.rs
plumbing/git-set-attr/: Cargo.toml
plumbing/git-set-attr/src/: lib.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
