[workspace]
resolver = "3"
members = [".", "crates/*"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
git2 = "0.20.4"

[package]
name = "git-vendor"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
git2.workspace = true
git-filter-tree = { path = "crates/git-filter-tree" }
