[workspace]
resolver = "3"
members = [".", "plumbing/*", "xtask"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[workspace.dependencies]
git2 = "0.20.4"
globset = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"
tempfile = "3"

[package]
name = "git-vendor"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git2.workspace = true
git-filter-tree = { path = "plumbing/git-filter-tree" }
git-set-attr = { path = "plumbing/git-set-attr" }
