[package]
name = "git-filter-tree"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "git-filter-tree"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
git2.workspace = true
globset.workspace = true
clap = { workspace = true, optional = true }
