[package]
name = "git-set-attr"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "git-set-attr"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
git2.workspace = true
clap = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
